tests/files/fail/invalidSuperCall.krna

fn main(args: [String]) {}

struct CustomClass {
    fn make(self) -> String {
        super<String>.toString()
    }
}


